made website fully responsive

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,10 +17,13 @@ img {
   width: 200px;
   height: 300px;
   object-fit: cover;
-  object-position:15% 15%;
+  object-position: 15% 15%;
 }
 .create_store_btn {
   margin-top: 44px !important;
+}
+.flex_wrap {
+  flex-wrap: nowrap!important;
 }
 body {
   color: var(--foreground);
