--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply bg-white text-gray-900 dark:bg-gray-900 dark:text-white;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -23,12 +27,90 @@ img {
   margin-top: 44px !important;
 }
 .flex_wrap {
-  flex-wrap: nowrap!important;
+  flex-wrap: nowrap !important;
+}
+.object-pos {
+  object-position: 50% 15%;
 }
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.circle-container {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.animated-circle {
+  width: 50px;
+  height: 50px;
+  background: linear-gradient(45deg, #0efff8, #1310ff);
+  border-radius: 50%;
+  display: inline-flex;
+  box-shadow: 10px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.animated-circle.one {
+  animation: bounce-one 1.5s ease-in-out infinite;
+}
+
+.animated-circle.two {
+  animation: bounce-two 1.5s ease-in-out infinite;
+}
+
+.animated-circle.three {
+  animation: bounce-three 1.5s ease-in-out infinite;
+}
+
+@keyframes bounce-one {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-5px);
+  }
+}
+@keyframes bounce-two {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-30px);
+  }
+  60% {
+    transform: translateY(-15px);
+  }
+}
+@keyframes bounce-three {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-10px);
+  }
+  60% {
+    transform: translateY(-25px);
+  }
 }
 
 @layer utilities {
